Synchronize with the official repository (11/05/2022-20/05/2022)
Last commit (20/05/2022): 1fad706c93911137593c49a634666a8eff7373f0
